--- a/HelloI2S.ioc
+++ b/HelloI2S.ioc
@@ -43,13 +43,14 @@ I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=I2S2
-Mcu.IP2=I2S3
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP1=I2C1
+Mcu.IP2=I2S2
+Mcu.IP3=I2S3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -62,8 +63,10 @@ Mcu.Pin14=PA13
 Mcu.Pin15=PA14
 Mcu.Pin16=PC10
 Mcu.Pin17=PB3
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC1
@@ -71,7 +74,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -128,6 +131,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC1.Mode=Half_Duplex_Master
 PC1.Signal=I2S2_SD
 PC10.Mode=Half_Duplex_Master
