--- a/HelloI2S.ioc
+++ b/HelloI2S.ioc
@@ -37,9 +37,9 @@ I2S3.ErrorAudioFreq=0.8 %
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,DataFormat,AudioFreq
 I2S3.Instance=SPI$Index
-I2S3.Mode=I2S_MODE_MASTER_RX
+I2S3.Mode=I2S_MODE_SLAVE_RX
 I2S3.RealAudioFreq=48.387 KHz
-I2S3.VirtualMode=I2S_MODE_MASTER
+I2S3.VirtualMode=I2S_MODE_SLAVE
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
@@ -113,7 +113,7 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Mode=Half_Duplex_Master
+PA4.Mode=Half_Duplex_Slave
 PA4.Signal=I2S3_WS
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
@@ -121,7 +121,7 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Mode=Master_Clock_Activated
 PA6.Signal=I2S2_MCK
-PB0.Mode=Half_Duplex_Master
+PB0.Mode=Half_Duplex_Slave
 PB0.Signal=I2S3_SD
 PB10.Mode=Half_Duplex_Master
 PB10.Signal=I2S2_CK
@@ -137,7 +137,7 @@ PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC1.Mode=Half_Duplex_Master
 PC1.Signal=I2S2_SD
-PC10.Mode=Half_Duplex_Master
+PC10.Mode=Half_Duplex_Slave
 PC10.Signal=I2S3_CK
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
@@ -184,7 +184,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2S2_Init-I2S2-false-HAL-true,6-MX_I2S3_Init-I2S3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2S2_Init-I2S2-false-HAL-true,6-MX_I2S3_Init-I2S3-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
